[package]
name = "circbuf"
version = "0.2.0"
authors = ["Jerome Froelich <jeromefroelich@hotmail.com>"]
description = "A growable circular buffer for working with bytes"
homepage = "https://github.com/jeromefroe/circbuf-rs"
repository = "https://github.com/jeromefroe/circbuf-rs.git"
documentation = "https://docs.rs/circbuf/"
readme = "README.md"
license = "MIT"
keywords = ["buffer", "bytes", "circular", "ring"]
edition = "2021"
rust-version = "1.56"

[features]

[dependencies]
bytes = { version = "0.5", optional = true }

[dev-dependencies]
vecio = "0.1.0"
tempfile = "3.3.0"